CKS/notes/gvisor_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  runtimeClassName: gvisor
  containers:
  - image: busybox
    name: busybox
    command: ['sh', '-c', 'while true; do echo "Running..."; sleep 1h; done']
